--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-music/*
 conf/*
 .vagrant/
 src/ubuntu-bionic-18.04-cloudimg-console.log
@@ -7,3 +6,4 @@ Dockerfile
 requirements.txt
 ubuntu-bionic-18.04-cloudimg-console.log
 Vagrantfile
+checklist
