--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+music/*
 conf/*
 .vagrant/
 src/ubuntu-bionic-18.04-cloudimg-console.log
@@ -6,4 +7,3 @@ Dockerfile
 requirements.txt
 ubuntu-bionic-18.04-cloudimg-console.log
 Vagrantfile
-checklist
